# blocky-time-webui

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.ve3/: pyvenv.cfg
docs/: dashboard.md
python/blockytime/: backup.py  constants.py  log.py  paths.py  server.py  utils.py
python/blockytime/data/: blockytime.sql
python/blockytime/dtos/: __init__.py  base_dto.py  block_dto.py  blockytimeconfig_dto.py  category_dto.py  config_dto.py  dbinfo_dto.py  goal_dto.py  link_dto.py  project_dto.py  remind_dto.py  sleep_dto.py  stamp_dto.py  stamper_dto.py  statistics_dto.py  trend_history_dto.py  trenditem_dto.py  type_dto.py
python/blockytime/interfaces/: blockserviceinterface.py  configdict.py  configserviceinterface.py  projectserviceinterface.py  sleepserviceinterface.py  statisticsserviceinterface.py  trendserviceinterface.py  typeserviceinterface.py
python/blockytime/models/: __init__.py  base.py  block.py  category.py  config.py  dbinfo.py  goal.py  link.py  project.py  remind.py  stamp.py  stamper.py  trend_history.py  type_.py
python/blockytime/routes/: admin.py  blocks.py  configs.py  decorators.py  sleeps.py  stats.py  trends.py  types.py
python/blockytime/scripts/: ai_tools.py  pull_db.py  push_db.py
python/blockytime/services/: blockservice.py  configservice.py  di.py  projectservice.py  sleepservice.py  statisticsservice.py  trendservice.py  typeservice.py
python/testblockytime/: test_blockservice.py  test_sleepservice.py  test_typeservice.py
typescript/v1/blockytime-app/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
typescript/v1/blockytime-app/src/: App.css  App.tsx  index.css  utils.ts
typescript/v1/blockytime-app/src/components/: Dashboard.css  Dashboard.tsx  DebugPanel.tsx  MainUI.css  MainUI.tsx  SleepDataChart.tsx  SleepDataControl.tsx  SleepDataSection.tsx  (+17 more)
(+32 files in other folders)
